# directory-setup

./: README.md  pyproject.toml  setup.cfg
src/: __init__.py  directory_node.py  directory_setup.py
tests/: __init__.py  test_directory_node.py
