[metadata]
# required for package to install with a name
name = directory-setup
version = attr: directory-setup.0.0.1
author = Jason Weible
author_email = weible.jason@gmail.com
description = pacakge to create directory structure
long_description = file: README.md
license = GPLv3+
classifiers = 
    Programming Language :: Python :: 3

# following "src" layout
[options]
package_dir=
    =src
packages=find

[options.packages.find]
where=src
